docs(wiki): 重构为 en/zh 双语言目录结构
- 将原中文页面迁移至 docs/wiki/zh/，新增 docs/wiki/en/ 英文翻译
- 根目录 Home/_Sidebar/_Footer 改为语言入口页，双语并列展示
- publish-wiki.yml 校验逻辑适配多目录：按语言子目录检查必需
  文件，并基于文件所在目录解析相对链接，规范化 ../ 路径